--- a/src/components/Main/style.css
+++ b/src/components/Main/style.css
@@ -253,9 +253,14 @@ section{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     gap: 1em;
     width: 300px;
+    height: 230px;
+}
+
+.vantagens__item-icon{
+    font-size: 2em;
 }
 
 .vantagens__item p{
@@ -874,17 +879,6 @@ section{
         font-size: 1.1em;
     }
 
-    /* DEPOIMENTOS */
-    /* DEPOIMENTOS */
-    /* DEPOIMENTOS */
-    .depoimentos__button-avaliacao{
-        width: 80%;
-    }
-
-    .depoimentos__button-avaliacao-link{
-        font-size: 1.1em;
-    }
-
     /* COLECAO */
     /* COLECAO */
     /* COLECAO */
@@ -900,6 +894,14 @@ section{
     /* DEPOIMENTOS */
     .depoimentos__titulo{
         font-size: 2em;
+    }
+
+    .depoimentos__button-avaliacao{
+        width: 100%;
+    }
+
+    .depoimentos__button-avaliacao-link{
+        font-size: 1.1em;
     }
 
     /* LOCALIZACAO */
@@ -921,7 +923,7 @@ section{
     }
 
     .localizacao__infos-strong, .localizacao__infos-span{
-        font-size: 0.8em;
+        font-size: 0.9em;
     }
 
     .localizacao__subcontainer-redes{
@@ -948,7 +950,7 @@ section{
     }
 
     .localizacao__infos-p-texto{
-        font-size: 0.8em;
+        font-size: 1em;
     }
 
     .localizacao__banner{
