--- a/src/components/Main/style.css
+++ b/src/components/Main/style.css
@@ -266,7 +266,7 @@ section{
 .vantagens__item p{
     color: #fff;
     text-align: center;
-    font-size: 0.8em;
+    font-size: 0.9em;
 }
 
 .vantagens__btn-contato{
@@ -332,7 +332,7 @@ section{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    width: 100%;
+    width: 90%;
     gap: 4em 2em;
     min-height: 50vh;
 }
@@ -473,6 +473,7 @@ section{
 
 .modal-footer{
     background-color: #000;
+    justify-content: flex-start !important;
 }
 
 .colecao__modal-container-card{
@@ -488,6 +489,8 @@ section{
 
 .colecao__modal-container-card-imagem{
     border-radius: 12px;
+    width: 310px;
+    height: 360px;
 }
 
 .colecao__modal-container-card-btn{
@@ -740,9 +743,12 @@ section{
     /* COLECAO */
     /* COLECAO */
     /* COLECAO */
-    
     .colecao{
-        padding-top: 12em;
+        padding-top: 6em;
+    }
+
+    .colecao__titulo{
+        margin-top: 0;
     }
 
     .container__colecao{
@@ -753,6 +759,7 @@ section{
         align-items: center;
         padding-bottom: 4em;
         margin: 0 4em;
+        width: 100%;
     }
 
     /* DEPOIMENTOS */
@@ -810,13 +817,13 @@ section{
     }
     
     .home__container-texto-titulo{
-        font-size: 1em;
-        width: 85%;
+        font-size: 1.3em;
+        width: 90%;
     }
     
     .home__container-texto-p{
         width: 100%;
-        font-size: 0.8em;
+        font-size: 1em;
     }
     
     .home__container-btn{
@@ -882,6 +889,10 @@ section{
     /* COLECAO */
     /* COLECAO */
     /* COLECAO */
+    .colecao{
+        padding-top: 4em;
+    }
+
     .colecao__titulo{
         font-size: 2em;
     }
@@ -889,11 +900,17 @@ section{
     .modal-dialog{
         max-width: 100vw !important;
     }
+
+    .colecao__modal-container-card-imagem{
+        width: 290px;
+        height: 340px;
+    }
     /* DEPOIMENTOS */
     /* DEPOIMENTOS */
     /* DEPOIMENTOS */
     .depoimentos__titulo{
         font-size: 2em;
+        text-align: center;
     }
 
     .depoimentos__button-avaliacao{
@@ -908,7 +925,7 @@ section{
     /* LOCALIZACAO */
     /* LOCALIZACAO */
     .localizacao__container{
-        padding-top: 0;
+        padding-top: 3em;
         padding-bottom: 3em;
     }
 
